--- a/demo/src/main/resources/templates/comprar.html
+++ b/demo/src/main/resources/templates/comprar.html
@@ -11,7 +11,7 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-primary-subtle">
     <div class="container-fluid">
         <a class="navbar-brand text-primary opacity-75" href="#">
-            <img src="img/lib-logo1.jpg" width="30" height="30" alt="logo">
+            <img src="../static/img/lib-logo1.jpg" width="30" height="30" alt="logo">
             Librería Bibliosfera
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -47,7 +47,7 @@
                 <h4 class="text-secondary-subtle">"Llévate contigo las historias que inspiran."</h4>
             </div>
             <div class="col-lg-6 col-12 text-center">
-                <img src="img/lib5.jpg" class="img-fluid rounded shadow" alt="banner">
+                <img src="../static/img/lib5.jpg" class="img-fluid rounded shadow" alt="banner">
             </div>
         </div>
     </div>
@@ -68,7 +68,7 @@
                 <input type="number" name="cantidad" id="cantidad" class="form-control" placeholder="Cantidad" required>
             </div>
             <div class="col-md-2">
-                <button class="btn btn-primary w-100" type="submit">Agregar</button>
+            <button class="btn btn-primary w-100" type="submit">Agregar</button>
             </div>
         </div>
     </form>
