--- a/demo/src/main/resources/templates/comprar.html
+++ b/demo/src/main/resources/templates/comprar.html
@@ -12,7 +12,7 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-primary-subtle">
     <div class="container-fluid">
         <a class="navbar-brand text-primary opacity-75" href="#">
-            <img src="/img/lib-logo1.jpg" width="30" height="30"> Libreria Bibliosfera
+            <img src="../static/img/lib-logo1.jpg" width="30" height="30"> Libreria Bibliosfera
         </a>
     </div>
     <div class="collapse navbar-collapse" id="navbarNav">
@@ -34,10 +34,16 @@
 </nav>
 
 <header class="bg-light py-4">
-    <div class="container text-center">
-        <h2 class="text-primary fw-bold"><i class="bi bi-cart4"></i> Compras</h2>
-        <h5 class="text-secondary">"Llévate contigo las historias que inspiran."</h5>
-    </div>
+    <div class="container">
+        <div class="row align-items-center">
+            <div class="col-lg-6 col-12 text-center text-lg-start mb-3 mb-lg-0">
+                <h2 class="text-primary fw-bold"><i class="bi bi-cart4"></i> Compras</h2>
+                <h5 class="text-secondary">"Llévate contigo las historias que inspiran."</h5>
+            </div>
+            <div class="col-lg-6 col-12 text-center">
+                <img src="../static/img/lib5.jpg" class="img-fluid rounded shadow">
+            </div>
+        </div>
 </header>
 
 <section class="container mt-4">
