--- a/demo/src/main/resources/templates/ingreso.html
+++ b/demo/src/main/resources/templates/ingreso.html
@@ -3,7 +3,7 @@
 <head><title>Ingreso</title></head>
 <body>
 <h2>Formulario de Ingreso</h2>
-<form action="/ingreso" method="post">
+<form thaction="@{/ingreso}" method="post">
     Nombre: <input type="text" name="nombre"><br>
     Correo: <input type="email" name="correo"><br>
     <button type="submit">Guardar</button>
