--- a/demo/src/main/resources/templates/ingreso.html
+++ b/demo/src/main/resources/templates/ingreso.html
@@ -1,13 +1,33 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
-<head><title>Ingreso</title></head>
+<html xmlns:th="http://www.thymeleaf.org" lang="es">
+<head>
+    <meta charset="UTF-8">
+    <title>Ingreso</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet">
+</head>
 <body>
-<h2>Formulario de Ingreso</h2>
-<form thaction="@{/ingreso}" method="post">
-    Nombre: <input type="text" name="nombre"><br>
-    Correo: <input type="email" name="correo"><br>
-    <button type="submit">Guardar</button>
-</form>
-<a href="/listado">Ver listado</a>
+
+<div class="container mt-5">
+    <h2 class="text-primary mb-4">Formulario de Ingreso</h2>
+
+    <form th:action="@{/ingreso}" method="post" class="row g-3">
+        <div class="col-md-6">
+            <label for="nombre" class="form-label">Nombre</label>
+            <input type="text" name="nombre" id="nombre" class="form-control" required>
+        </div>
+        <div class="col-md-6">
+            <label for="correo" class="form-label">Correo</label>
+            <input type="email" name="correo" id="correo" class="form-control" required>
+        </div>
+        <div class="col-12">
+            <button type="submit" class="btn btn-success">Guardar</button>
+        </div>
+    </form>
+
+    <div class="mt-3">
+        <a th:href="@{/listado}" class="btn btn-secondary">Ver listado</a>
+    </div>
+</div>
+
 </body>
 </html>
