--- a/demo/src/main/resources/templates/comprar.html
+++ b/demo/src/main/resources/templates/comprar.html
@@ -12,9 +12,13 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-primary-subtle">
     <div class="container-fluid">
         <a class="navbar-brand text-primary opacity-75" href="#">
-            <img src="/img/lib-logo1.jpg" width="30" height="30"> Libreria Bibliosfera
+            <img th:src="@{/img/lib-logo1.jpg}" width="30" height="30"> Libreria Bibliosfera
         </a>
     </div>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+    </button>
     <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav ms-auto">
             <li class="nav-item">
@@ -90,4 +94,5 @@
     <p class="text-center small mb-0">© 2025 Bibliósfera - Todos los derechos reservados</p>
 </footer>
 </body>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"></script>
 </html>
