COMPILA O ME SUICIDO

--- a/demo/src/main/resources/templates/index.html
+++ b/demo/src/main/resources/templates/index.html
@@ -9,7 +9,7 @@
 <body class="bg-white">
 
   <!-- Navbar -->
-  <div th:replace="fragments/navbar :: navbar"></div>
+  <div th:replace="~{fragments/navbar :: navbar}"></div>
 
   <!-- Contenido dinámico -->
   <main class="container my-4">
@@ -17,7 +17,7 @@
   </main>
 
   <!-- Footer -->
-  <div th:replace="fragments/footer :: footer"></div>
+  <div th:replace="~{fragments/footer :: footer}"></div>
 
 </body>
 </html>
