--- a/demo/src/main/resources/templates/compras.html
+++ b/demo/src/main/resources/templates/compras.html
@@ -1,4 +1,4 @@
-<section th:fragment="contenido" class="container mt-4">
+<div th:fragment="contenido">
     <header class="bg-light py-4 mb-4">
         <div class="row align-items-center">
             <div class="col-lg-6 col-12 text-center text-lg-start mb-3 mb-lg-0">
@@ -59,4 +59,4 @@
     <h4 class="text-end">Total: 
         <span class="text-primary fw-bold" th:text="${total}"></span>
     </h4>
-</section>
+</div>
