--- a/demo/src/main/resources/templates/index.html
+++ b/demo/src/main/resources/templates/index.html
@@ -13,7 +13,7 @@
 
   <!-- Contenido dinámico -->
   <main class="container my-4">
-      <div th:replace="${contenido}"></div>
+      <div th:replace="~{${contenido}}"></div>
   </main>
 
   <!-- Footer -->
