--- a/demo/src/main/resources/templates/nosotros.html
+++ b/demo/src/main/resources/templates/nosotros.html
@@ -1,4 +1,4 @@
-<section th:fragment="contenido">
+<div th:fragment="contenido">
     <header class="border-bottom bg-light py-4">
         <div class="container">
             <div class="row align-items-center">
@@ -72,4 +72,4 @@
             </div>
         </div>
     </section>
-</section>
+</div>
